--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,5 +1,6 @@
 Package: meteo
 Type: Package
+Encoding: UTF-8
 Title: Spatio-Temporal Analysis and Mapping of Meteorological Observations
 Version: 1.0-1
 Date: 2015-09-22
@@ -10,4 +11,4 @@ License: GPL (>= 2.0) | file LICENCE
 URL: http://meteo.r-forge.r-project.org/
 LazyLoad: yes
 Depends: R (>= 3.0.0)
-Imports: methods, utils, stats, sp, spacetime, rgdal, gstat, raster, snowfall, plyr, nabor, CAST, ranger
+Imports: methods, utils, stats, sp, spacetime, rgdal, gstat, raster, snowfall, plyr, nabor, CAST, ranger, caret
